[gd_scene load_steps=7 format=3 uid="uid://b4ux7dvilferi"]

[ext_resource type="Script" path="res://addons/workday_timer/timer_widget.gd" id="1_b8wxp"]
[ext_resource type="Texture2D" uid="uid://b5hbog08hbvhx" path="res://addons/workday_timer/GDScript.svg" id="2_w36cb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvtwf"]
bg_color = Color(0.14902, 0.168627, 0.203922, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ryyd"]
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_c4457"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6rya"]
bg_color = Color(0.172549, 0.211765, 0.266667, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.117647, 0.133333, 0.160784, 1)

[node name="WorkdayTimer" type="PanelContainer"]
custom_minimum_size = Vector2(140, 5)
offset_right = 172.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rvtwf")
script = ExtResource("1_b8wxp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6ryyd")
text = "05:45:27"
label_settings = SubResource("LabelSettings_c4457")
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start"

[node name="SettingsButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "
"
icon = ExtResource("2_w36cb")
icon_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="PopupMenu" type="Window" parent="."]
title = "Workday Timer"
initial_position = 1
size = Vector2i(350, 100)
visible = false

[node name="Panel" type="Panel" parent="PopupMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v6rya")

[node name="MarginContainer" type="MarginContainer" parent="PopupMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PopupMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
columns = 4

[node name="Label" type="Label" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "Hours"

[node name="Label2" type="Label" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "Minutes
"

[node name="Label3" type="Label" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "Seconds
"

[node name="Label4" type="Label" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = " "
horizontal_alignment = 1

[node name="HoursEdit" type="SpinBox" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MinutesEdit" type="SpinBox" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2

[node name="SecondsEdit" type="SpinBox" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2

[node name="SetButton" type="Button" parent="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "Reset"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="close_requested" from="PopupMenu" to="." method="_on_popup_menu_close_requested"]
[connection signal="close_requested" from="PopupMenu" to="PopupMenu" method="_on_close_requested"]
[connection signal="button_up" from="PopupMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer/SetButton" to="." method="_on_set_button_button_up"]
